finsihed ready to deploy

--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
         </section>
         
         <footer>
-            <p>Powered by <a href="https://openweathermap.org/api" target="_blank">OpenWeather API</a></p>
+            <p>Powered by <a href="https://www.visualcrossing.com" target="_blank">Visual Crossing</a></p>
         </footer>
     </div>
     
