-m finshed the project

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Powered by <a href="https://www.visualcrossing.com" target="_blank">Visual Crossing</a></p>
         </footer>
     </div>
-    <script src="config.js" type="module"></script>
-    <script src="script.js" type="module"></script>
+    
+    <script src="script.js" ></script>
 </body>
 </html>
